--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "normalize.css": "^8.0.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
+    "react-cool-onclickoutside": "^1.5.8",
     "react-dom": "^16.13.1",
     "react-i18next": "^11.7.3",
     "react-redux": "^7.2.1",
